Add dropout notebook and update matrix multiplication configurations for Triton integration, enhancing GPU acceleration capabilities.

--- a/matmul.ipynb
+++ b/matmul.ipynb
@@ -25,20 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "46e3a936",
    "metadata": {},
    "outputs": [],
    "source": [
     "autotune_configs = [\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 64, 'GROUP_SIZE': 8}, num_stages=3, num_warps=8),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 64, 'GROUP_SIZE': 8}, num_stages=3, num_warps=8),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
     "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 128, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 128, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 32, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 32, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=5, num_warps=2),\n",
-    "    # triton.Config({'BLOCK_SIZE_M': 32, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=5, num_warps=2)\n",
+    "    triton.Config({'BLOCK_SIZE_M': 256, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 128, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 32, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 32, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=5, num_warps=2),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 32, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=5, num_warps=2),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 64, 'GROUP_SIZE': 8}, num_stages=3, num_warps=8),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 256, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 128, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 64, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 64, 'BLOCK_SIZE_N': 128, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
+    "    triton.Config({'BLOCK_SIZE_M': 128, 'BLOCK_SIZE_N': 32, 'BLOCK_SIZE_K': 32, 'GROUP_SIZE': 8}, num_stages=4, num_warps=4),\n",
     "]\n",
     "\n",
     "@triton.autotune(configs=autotune_configs, key=['M','N','K'])\n",
@@ -71,28 +78,33 @@
     "    offsets_N = block_id_N * BLOCK_SIZE_N + tl.arange(0, BLOCK_SIZE_N)\n",
     "    offsets_K = tl.arange(0, BLOCK_SIZE_K)\n",
     "\n",
-    "    a_offsets = offsets_M[:, None] * stride_a_M + offsets_K[None, :] * stride_a_K\n",
-    "    b_offsets = offsets_K[:, None] * stride_b_K + offsets_N[None, :] * stride_b_N\n",
+    "    a_ptrs = a_ptr + (offsets_M[:, None] * stride_a_M + offsets_K[None, :] * stride_a_K)\n",
+    "    b_ptrs = b_ptr + (offsets_K[:, None] * stride_b_K + offsets_N[None, :] * stride_b_N)\n",
+    "    \n",
+    "    mask_m = offsets_M < M\n",
+    "    mask_n = offsets_N < N\n",
+    " \n",
     "\n",
     "    accumulator = tl.zeros((BLOCK_SIZE_M, BLOCK_SIZE_N), dtype=tl.float32)\n",
     "\n",
     "    for k in range(0, tl.cdiv(K, BLOCK_SIZE_K)):\n",
-    "        mask = k * BLOCK_SIZE_K + offsets_K < K\n",
-    "        a = tl.load(a_ptr + a_offsets, mask=mask[None, :], other=0.0)\n",
-    "        b = tl.load(b_ptr + b_offsets, mask=mask[:, None], other=0.0)\n",
+    "        mask_k = offsets_K < K - k\n",
+    "\n",
+    "        a = tl.load(a_ptrs, mask=mask_m[:, None] & mask_k[None, :], other=0.0)\n",
+    "        b = tl.load(b_ptrs, mask=mask_k[:, None] & mask_n[None, :], other=0.0)\n",
     "\n",
     "        accumulator = tl.dot(a, b, acc=accumulator)\n",
-    "        a_offsets += BLOCK_SIZE_K * stride_a_K\n",
-    "        b_offsets += BLOCK_SIZE_K * stride_b_K\n",
+    "        a_ptrs += BLOCK_SIZE_K * stride_a_K\n",
+    "        b_ptrs += BLOCK_SIZE_K * stride_b_K\n",
     "    \n",
     "    c_offsets = stride_c_M * offsets_M[:, None] + stride_c_N * offsets_N[None, :]\n",
-    "    c_mask = (offsets_M[:, None] < M) & (offsets_N[None,:] < N)\n",
+    "    c_mask = mask_m[:, None] & mask_n[None, :]\n",
     "    tl.store(c_ptr + c_offsets, accumulator.to(tl.float16), mask=c_mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "1c8ef3d7",
    "metadata": {},
    "outputs": [],
@@ -202,10 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "49d1815b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'https://8080-gpu-t4-s-2fzho3j82rgrt-b.us-west4-2.prod.colab.dev/'. Verify the server is running and reachable."
+     ]
+    }
+   ],
    "source": [
     "benchmark.run(print_data=False)"
    ]
